--- a/.config/mypy/config
+++ b/.config/mypy/config
@@ -1,6 +1,6 @@
 [mypy]
 ; ignore_errors = True
-disable_error_code = var-annotated, call-overload, arg-type, index, operator, has-type, union-attr, attr-defined, assignment, misc, return-value, valid-type
+disable_error_code = var-annotated, call-overload, arg-type, index, operator, has-type, union-attr, attr-defined, assignment, misc, return-value, valid-type, list-item
 ignore_missing_imports = True
 check_untyped_defs = True
 allow_untyped_defs = True
